test/studies/hpcc/RA/marybeth/ra-uint-test4.good
ra-uint-test4.chpl:2: error: cannot initialize 'TableSize' of type 'uint(64)' from a 'int(64)'
